[project]
name = "fanfou_sdk"
version = "0.0.3"
description = "Fanfou SDK for Python"
readme = "README.md"
authors = [{ name = "LitoMore", email = "litomore@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["requests>=2.32.5", "six>=1.17.0"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.12.10"]
